--- a/page.html.html
+++ b/page.html.html
@@ -4,7 +4,6 @@
     <body>
         <h1>Hello World</h1>
         <span> Welcome in Canda</span>
-        <a href="www.google.com"> Google </a>
-        <a href="connectus.html">connect</a>
+        <p>We we wewe </p>
     </body>
 </html>
