--- a/page.html
+++ b/page.html
@@ -3,6 +3,8 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <h2>Version control system with git</h2>
+        <p>El 3shry git lessons</p>
         <span> Welcome in Canda</span>
         <a href="google.com">google</a>
     </body>
