--- a/page.html
+++ b/page.html
@@ -10,5 +10,6 @@
         <span> Welcome in Canda</span>
         <a href="google.com">google</a>
         <h1>Line1</h1>
+        <h2>Line2</h2>
     </body>
 </html>
