ADD 2 lines in B02

--- a/page.html
+++ b/page.html
@@ -9,5 +9,7 @@
         <p> month 3 </p>
         <span> Welcome in Canda</span>
         <a href="google.com">google</a>
+        <h2> this is for B01</h2>
+        <h3> this is for B01 - 2 </h3>
     </body>
 </html>
